Oauth2-Proxy/manifests/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: istio-system
spec:
  selector:
    app: oauth2-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
